# chayut-sareior-mlops

./: README.md  pyproject.toml  requirements.txt
app/: main.py  teste.py
app/api/v1/: router.py
app/api/v1/endpoints/: credit_scoring.py  health_diagnosis.py
app/config/: configuracao.py
app/core/: config.py
app/schemas/: health.py
app/security/: seguranca.py
app/services/: model_loader.py
app/services/predictors/: financial_predictor.py  torch_predictor.py
models/: model_v2.pth
models_store/health/: model_v1.pkl
